# wireguard-vpn-suite

./: .gitignore  README.md  package.json
client-app/: index.html  package.json
client-app/electron/: main.js  preload.js
client-app/src/: App.tsx  types.ts
client-app/src/components/: TunnelConnector.tsx
go-wails-reference/: main.go
server-app/: index.html  package.json
server-app/electron/: main.js  preload.js
server-app/src/: App.tsx
server-app/src/components/: PeerQRCodeModal.tsx  ServerConfig.tsx
server-app/src/utils/: wireguard.ts
tauri-rust-reference/: Cargo.toml
tauri-rust-reference/src/: main.rs
